--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,13 +14,15 @@
                 background-color: #0D6AC7;
             }
             .mid_div {
-                padding-top: 5%;
                 padding-left: 5%;
                 padding-right: 5%;
                 width: 70%;
                 height: 100vh;
                 float: left;
                 background-color: white;
+                display: flex; 
+                align-items: center; 
+                justify-content: center
             }
             .right_div {
                 width: 15%;
