--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -58,10 +58,10 @@
         <h3>What do you do?</h3>
           {% for n in range(4) %}
           <div class="prompt_divs">
-            <img src="../static/img/logo.png" style="width: 100%;"/>
+            <img src="{{prompt_images[n]}}" style="width: 100%;"/>
             <div style="display: flex; align-items: center; justify-content: center; padding: 5%">
               <p style="position: relative; bottom: 0; text-align: center;">{{actions[n]}}</p>
-              <input type="submit" name="{{my_list[n]}}" id="{{my_list[n]}}" value="{{my_list[n]}}" style="position: absolute; bottom: 0; margin-top: 20%;">
+              <input type="submit" name="{{prompt_images[n]}}" id="{{prompt_images[n]}}" value="Select" style="position: absolute; bottom: 0; margin-top: 20%;">
             </div>
           </div>
           {% endfor %}
