--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -8,7 +8,7 @@
     <style type="text/css">
       .game_container {
         height: 75vh;
-        background-color: wheat;
+        /* background-color: wheat; */
         padding: 2.5%;
         width: 100%;
       }
@@ -24,6 +24,7 @@
         width: 70%;
         float: left;
         background-color: white;
+        height: 100vh;
       }
       .right_div {
         width: 15%;
@@ -39,6 +40,7 @@
       } 
       .prompt_divs {
         width: 25%;
+        height: 65%;
         position: relative;
         float: left;
         align-items: center; 
@@ -56,22 +58,22 @@
         <h2>Month: {{month}}</h2>
         <h2>Prompt: {{current_prompt}}</h2> 
         <h3>What do you do?</h3>
-          {% for n in range(4) %}
-          <div class="prompt_divs">
-            <img src="{{prompt_images[n]}}" style="width: 100%;"/>
-            <div style="display: flex; align-items: center; justify-content: center; padding: 5%">
-              <p style="position: relative; bottom: 0; text-align: center;">{{actions[n]}}</p>
-              <input type="submit" name="{{prompt_images[n]}}" id="{{prompt_images[n]}}" value="Select" style="position: absolute; bottom: 0; margin-top: 20%;">
+          <form method="POST" action="/game">
+            {% for n in range(4) %}
+            <div class="prompt_divs">
+                <div style="display: flex; align-items: center; justify-content: center; padding: 5%">
+                    <p style="position: relative; bottom: 0; text-align: center;">{{actions[n]}}</p>
+                </div>
+              <input type="image" src="{{prompt_images[n]}}" style="width: 100%; height: 60%;" id="{{prompt_images[n]}}" 
+                      name="{{prompt_images[n]}}" type="submit"/>
             </div>
-          </div>
-          {% endfor %}
+            {% endfor %}
+          </form>
       </div>
-    <p style="bottom: 0; position: relative; text-align: center;">This is the close</p>
     </div>
     <div class="right_div">
-        <p style="color: white">Moral State: {{moral_state}}</p>
+        <p style="color: white">Prompt: {{prompt_number}}/15</p>
     </div>
-
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   </body>
