--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -31,6 +31,7 @@
         height: 100vh;
         float: left;
         background-color: #0D6AC7;
+        padding-left: 2.5%;
       } 
       .game_div {
         height: 100%;
@@ -72,7 +73,9 @@
       </div>
     </div>
     <div class="right_div">
-        <p style="color: white">Prompt: {{prompt_number}}/15</p>
+        <h1 style="color: white">Prompt: {{prompt_number}}/15</h1>
+        <br />
+        <h2 style="color: white">Score: {{score}}/1500</h2>
     </div>
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
