--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,7 +22,7 @@
                 background-color: white;
                 display: flex; 
                 align-items: center; 
-                justify-content: center
+                justify-content: center;
             }
             .right_div {
                 width: 15%;
