--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -17,9 +17,10 @@
                 padding-left: 5%;
                 padding-right: 5%;
                 width: 60%;
-                height: 100vh;
+                height: 100%;
                 float: left;
                 background-color: white;
+                justify-content: center;
             }
             .right_div {
                 width: 15%;
@@ -30,7 +31,7 @@
         </style>
 
     </head>
-    <body>
+    <body style="background-color: #0D6AC7;">
         <div class="left_div">
             <img src="../static/img/logo.png" style="width: 100%" />
         </div>
