The Final Commit:
Project has been turned in and now we wait. Oh yea, modified the results
page.

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -38,7 +38,7 @@
         <div class="mid_div">
             <h1>Here are your results!</h1>
             <br />
-            <h2>Moral score: {{moral_score}}</h2>
+            <h2>Moral score: {{moral_score}}/100</h2>
             <br />
             <h2>Moral State: {{moral_state}}</h2>
             <br >
